--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,8 +1,15 @@
 {
   "name": "rescript-dom-testing-library",
   "version": "0.1.0",
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
-  }
+  "sources": [
+    {
+      "dir": "src",
+      "subdirs": true
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
+  ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"]
 }
