--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "rescript-dom-testing-library",
+  "description": "ReScript bindings for @testing-library/dom",
   "version": "0.1.0",
   "scripts": {
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
-    "watch": "bsb -make-world -w"
+    "watch": "bsb -make-world -w",
+    "test": "jest test -w"
   },
   "keywords": [
     "BuckleScript"
@@ -12,6 +14,10 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@glennsl/bs-jest": "^0.6.0",
     "bs-platform": "^9.0.1"
+  },
+  "dependencies": {
+    "@testing-library/dom": "^7.29.4"
   }
 }
