--- a/bsconfig.json
+++ b/bsconfig.json
@@ -11,5 +11,5 @@
       "type": "dev"
     }
   ],
-  "bs-dev-dependencies": ["@glennsl/bs-jest"]
+  "bs-dev-dependencies": ["@glennsl/bs-jest", "bs-jest-dom"]
 }
