--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "@glennsl/bs-jest": "^0.6.0",
+    "bs-jest-dom": "^4.1.1",
     "bs-platform": "^9.0.1",
     "semantic-release": "^17.3.9"
   },
