--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "ReScript bindings for @testing-library/dom",
   "version": "0.0.0-semantic-released",
   "scripts": {
-    "clean": "bsb -clean-world",
-    "build": "bsb -make-world",
-    "watch": "bsb -make-world -w",
+    "clean": "rescript clean",
+    "build": "rescript build",
+    "watch": "rescript build -w",
     "test": "jest test",
     "commit": "cz"
   },
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@glennsl/bs-jest": "^0.6.0",
     "bs-jest-dom": "^4.1.1",
-    "bs-platform": "^9.0.1",
+    "rescript": "^9.1.3",
     "semantic-release": "^17.3.9"
   },
   "dependencies": {
