feat: add bindings for UserEvent.click

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@testing-library/dom": "^7.29.4",
+    "@testing-library/user-event": "^13.1.9",
     "commitizen": "^4.2.3"
   }
 }
