--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "devDependencies": {
     "@glennsl/bs-jest": "^0.6.0",
     "bs-jest-dom": "^4.1.1",
+    "commitizen": "^4.2.3",
     "rescript": "^9.1.3",
     "semantic-release": "^17.3.9"
   },
   "dependencies": {
     "@testing-library/dom": "^8.1.0",
-    "@testing-library/user-event": "^13.1.9",
-    "commitizen": "^4.2.3"
+    "@testing-library/user-event": "^13.1.9"
   }
 }
